[package]
name = "rspg"
version = "0.1.0"
edition = "2021"
authors = ["viocal@qq.com>"]
description = "rspg tiny native postgresql driver by rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# Authentication support scram-sha-256
hmac = "0.12"
sha2 = "0.10"
stringprep = "0.1"

[lib]
name = "rspg"
path = "rspg.rs"

[build]

[[bin]]
name = "rpgt2"
path = "rpgt2.rs"



[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
debug = false
strip = true
